sherpa-onnx/c-api/c-api.h

/**
 * @brief Return the sherpa-onnx version string.
 *
 * The returned pointer refers to statically allocated memory owned by the
 * library. Do not free it and do not modify it.
 *
 * @return Version string, for example `"1.12.1"`.
 *
 * @code
 * printf("sherpa-onnx version: %s\n", SherpaOnnxGetVersionStr());
 * @endcode
 */
SHERPA_ONNX_API const char *SherpaOnnxGetVersionStr();
/**
 * @brief Return the Git SHA1 used to build the library.
 *
 * The returned pointer refers to statically allocated memory owned by the
 * library. Do not free it and do not modify it.
 *
 * @return Short Git SHA1 string, for example `"6982b86c"`.
 */
SHERPA_ONNX_API const char *SherpaOnnxGetGitSha1();
/**
 * @brief Return the Git build date used to build the library.
 *
 * The returned pointer refers to statically allocated memory owned by the
 * library. Do not free it and do not modify it.
 *
 * @return Build date string, for example `"Fri Jun 20 11:22:52 2025"`.
 */
SHERPA_ONNX_API const char *SherpaOnnxGetGitDate();
/**
 * @brief Return the onnxruntime version string used by the library.
 *
 * The returned pointer refers to statically allocated memory owned by the
 * library. Do not free it and do not modify it.
 *
 * @return Onnxruntime version string, for example `"1.22.0"`.
 */
SHERPA_ONNX_API const char *SherpaOnnxGetOnnxruntimeVersionStr();
/**
 * @brief Check whether a file exists.
 *
 * @param filename File path to test.
 * @return 1 if the file exists; otherwise 0.
 *
 * @code
 * if (!SherpaOnnxFileExists("./Obama.wav")) {
 *   fprintf(stderr, "Please download Obama.wav\n");
 * }
 * @endcode
 */
SHERPA_ONNX_API int32_t SherpaOnnxFileExists(const char *filename);